bundles/roboconf-core/src/test/resources/configurations/invalid/duplicate-facet.graph
component A {
	alias: A;
	installer: whatever;
	facets: fA;
}

component B {
	alias: B;
	installer: B;
	facets: fB;
}

facet fA {
	# nothing
}

facet fB {
	# nothing
}

facet fA {
	installer: whatever;
}

facet fA {
	# nothing
}
